--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
         <a href="#contact" class="btn">Me contacter</a>
     </nav>
 
+    <section id="acceuil">
+            <img src="images/profil.jpeg" alt="">
+            <div class="info-box">
+                <h1><span>Bonjour, je suis Jonathan</span></h1>
+                <h3><span>Web Developer</span>situé à Calais</h3>
+                <p>Étudiant en Licence 1 info à l'ULCO. Pationné par le développement web, je conçois des sites et applications web interactifs et fonctionnels avec HTML - CSS -JavaScript. curieux et motivé, j'aime explorer de nouvelles technologies et apprendre en continu</p>
+            </div>
 
+            <div>
+                
+            </div>
+    </section>
 
 
 
