--- a/index.html
+++ b/index.html
@@ -25,19 +25,104 @@
 
     <section id="acceuil">
             <img src="images/profil.jpeg" alt="">
+
             <div class="info-box">
                 <h1><span>Bonjour, je suis Jonathan</span></h1>
-                <h3><span>Web Developer</span>situé à Calais</h3>
+                <h3><span>Web Developer </span>situé à Calais</h3>
                 <p>Étudiant en Licence 1 info à l'ULCO. Pationné par le développement web, je conçois des sites et applications web interactifs et fonctionnels avec HTML - CSS -JavaScript. curieux et motivé, j'aime explorer de nouvelles technologies et apprendre en continu</p>
             </div>
 
-            <div>
-                
+            <div class="btn-box">
+                <div class="btn">À propos</div>
+                <div class="btn">Me contacter</div>
             </div>
     </section>
 
-    <section>
-        
+    <section id="apropos">
+        <div class="apropos-box">
+
+            <div class="apropos-info">
+                <h1><span>À propos de moi</span></h1>
+                <p>BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB</p>
+            </div>
+
+            <div class="timeline-section">
+
+                <div class="timeline-items">
+
+                    <div class="timeline-item">
+
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2000</div>
+                        <div class="timeline-content">
+                            <h3>timeline info 1</h3>
+                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2000</div>
+                        <div class="timeline-content">
+                            <h3>timeline info 2</h3>
+                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2000</div>
+                        <div class="timeline-content">
+                            <h3>timeline info 3</h3>
+                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2000</div>
+                        <div class="timeline-content"></div>
+                            <h3>timeline info 3</h3>
+                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                    </div>
+
+                    <div class="timeline-item">
+
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2000</div>
+                        <div class="timeline-content">
+                            <h3>timeline info 4</h3>
+                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2000</div>
+                        <div class="timeline-content">
+                            <h3>timeline info 5</h3>
+                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2000</div>
+                        <div class="timeline-content">
+                            <h3>timeline info 6</h3>
+                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <h2><span>skills</span></h2>
+        </div>
     </section>
 
 
