--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
     <nav>
         <a href="#" class="logo"><span>Jonathan</span></a>
@@ -14,7 +15,7 @@
         <ul class="links">
             <a href="#acceuil">Acceuil</a>
             <a href="#apropos">À propos</a>
-            <a href="#competences">Compétences</a>
+            <a href="#services">Compétences</a>
             <a href="#contact">Coordonnées</a>
         </ul>
 
@@ -24,107 +25,101 @@
     </nav>
 
     <section id="acceuil">
-            <img src="images/profil.jpeg" alt="">
 
-            <div class="info-box">
-                <h1><span>Bonjour, je suis Jonathan</span></h1>
-                <h3><span>Web Developer </span>situé à Calais</h3>
-                <p>Étudiant en Licence 1 info à l'ULCO. Pationné par le développement web, je conçois des sites et applications web interactifs et fonctionnels avec HTML - CSS -JavaScript. curieux et motivé, j'aime explorer de nouvelles technologies et apprendre en continu</p>
-            </div>
+        <img src="images/profil.jpeg" alt="">
 
-            <div class="btn-box">
-                <div class="btn">À propos</div>
-                <div class="btn">Me contacter</div>
-            </div>
-    </section>
+        <div class="info-box">
+            <h1><span>Bonjour, je suis Jonathan</span></h1>
+            <h3><span>Web Developer </span>situé à Calais</h3>
+            <p>Étudiant en Licence 1 info à l'ULCO. Pationné par le développement web, je conçois des sites et applications web interactifs et fonctionnels avec HTML - CSS -JavaScript. curieux et motivé, j'aime explorer de nouvelles technologies et apprendre en continu</p>
+        </div>
 
-    <section id="apropos">
-        <div class="apropos-box">
-
-            <div class="apropos-info">
-                <h1><span>À propos de moi</span></h1>
-                <p>BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB</p>
-            </div>
-
-            <div class="timeline-section">
-
-                <div class="timeline-items">
-
-                    <div class="timeline-item">
-
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2000</div>
-                        <div class="timeline-content">
-                            <h3>timeline info 1</h3>
-                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-                        </div>
-                    </div>
-
-                    <div class="timeline-item">
-
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2000</div>
-                        <div class="timeline-content">
-                            <h3>timeline info 2</h3>
-                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-                        </div>
-                    </div>
-
-                    <div class="timeline-item">
-
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2000</div>
-                        <div class="timeline-content">
-                            <h3>timeline info 3</h3>
-                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-                        </div>
-                    </div>
-
-                    <div class="timeline-item">
-
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2000</div>
-                        <div class="timeline-content"></div>
-                            <h3>timeline info 3</h3>
-                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-                    </div>
-
-                    <div class="timeline-item">
-
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2000</div>
-                        <div class="timeline-content">
-                            <h3>timeline info 4</h3>
-                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-                        </div>
-                    </div>
-
-                    <div class="timeline-item">
-
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2000</div>
-                        <div class="timeline-content">
-                            <h3>timeline info 5</h3>
-                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-                        </div>
-                    </div>
-
-                    <div class="timeline-item">
-
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2000</div>
-                        <div class="timeline-content">
-                            <h3>timeline info 6</h3>
-                            <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <h2><span>skills</span></h2>
+        <div class="btn-box">
+            <div class="btn">À propos</div>
+            <div class="btn">Me contacter</div>
         </div>
     </section>
 
+    <section id="propos">
+
+        <div class="propos-box">
+
+            <div class="propos-info">
+
+                <h1><span>À propos de moi</span></h1>
+                <p>AAAAAAAaqsdfghjbknl,mù!:l;k,jhqexrtcyugijopkùmljkhgjfhdgcgvjbknl,m;ù!:;k,jhvv jk:l,!m.§AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+
+            </div>
+
+            <h2><span>Compétences</span></h2>
+
+            <div class="compts">
+
+                <ul>
+                    <li>
+                        <span><i class='bx bx-chevron-right'></i> HTML</span>
+                    </li>
+
+                    <li>
+                        <span><i class='bx bx-chevron-right'></i> CSS</span>
+                    </li>
+
+                    <li>
+                        <span><i class='bx bx-chevron-right'></i> JavaScript</span>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <span><i class='bx bx-chevron-right'></i> Python</span>
+                    </li>
+
+                    <li>
+                        <span><i class='bx bx-chevron-right'></i> C</span>
+                    </li>
+
+                    <li>
+                        <span><i class='bx bx-chevron-right'></i> figma</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <img src="images/profil.jpeg" alt="">
+
+    </section>
+
+    <section id="services">
+
+        <h1 class="header"><span>Services</span></h1>
+
+        <div class="serv-cont">
+
+            <div class="box">
+
+                <h1><span>Web Design</span></h1>
+
+                <p>AAAAAAAaqsdfghjbknl,mù!:l;k,jhqexrtcyugijopkùmljkhgjfhdgcgvjbknl,m;ù!:;k,jhvv jk:l,!m.§AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                <img src="images/web-design.jpeg" alt="">
+            </div>
+
+            <div class="box">
+
+                <h1><span>Web Development</span></h1>
+
+                <p>AAAAAAAaqsdfghjbknl,mù!:l;k,jhqexrtcyugijopkùmljkhgjfhdgcgvjbknl,m;ù!:;k,jhvv jk:l,!m.§AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                <img src="images/web-dev.jpeg" alt="">
+            </div>
+
+            <div class="box">
+
+                <h1><span>UI/UX</span></h1>
+
+                <p>AAAAAAAaqsdfghjbknl,mù!:l;k,jhqexrtcyugijopkùmljkhgjfhdgcgvjbknl,m;ù!:;k,jhvv jk:l,!m.§AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                <img src="images/UI-UX.jpeg" alt="">
+            </div>
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
 </body>
