--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <ul class="links">
             <a href="#acceuil">Acceuil</a>
-            <a href="#apropos">À propos</a>
+            <a href="#propos">À propos</a>
             <a href="#services">Compétences</a>
             <a href="#contact">Coordonnées</a>
         </ul>
