--- a/index.html
+++ b/index.html
@@ -122,6 +122,30 @@
         </div>
     </section>
 
+    <section id="contact">
+
+        <h1 class="header"><span>Contact</span></h1>
+
+        <form action="#">
+            <div class="entrer-box">
+                <span>Nom complet</span>
+                <input type="text" placeholder="Enter votre nom complet">
+            </div>
+
+            <div class="entrer-box">
+                <span>Ton Email</span>
+                <input type="text" placeholder="Enter votre Email">
+            </div>
+
+            <div class="entrer-box">
+                <span>Nom complet</span>
+                <input type="text" placeholder="Enter votre message">
+            </div>
+
+            <div class="btn">Envoyer</div>
+        </form>
+
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
