--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <h1 class="header"><span>Contact</span></h1>
 
-        <form action="#">
+        <form action="#" method="post">
             <div class="entrer-box">
                 <span>Nom complet</span>
                 <input type="text" placeholder="Enter votre nom complet">
@@ -142,10 +142,30 @@
                 <input type="text" placeholder="Enter votre message">
             </div>
 
-            <div class="btn">Envoyer</div>
+            <div class="btn-box">
+                <button type="submit" class="btn">Envoyer</button>
+                <button type="reset" class="btn">Supprimer</button>
+            </div>
         </form>
 
     </section>
+
+    <footer class="footer">
+
+        <div class="footer-content">
+            <div class="social-icons">
+                <a href="#"><i class="bx bxl-whatsapp"></i></a>
+                <a href="#"><i class="bx bxl-instagram"></i></a>
+                <a href="#"><i class="bx bxl-facebook"></i></a>
+                <a href="#"><i class="bx bxl-twitch"></i></a>
+            </div>
+
+            <div>
+                <p class="copyright">© 2025 Jonathan Mbongo | All Rights Reserved.</p>
+            </div>
+        </div>
+
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
