--- a/index.html
+++ b/index.html
@@ -5,167 +5,162 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jonathan-portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Librairie d’icônes Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
+    <!-- Barre de navigation -->
     <nav>
-
+        <!-- Logo -->
         <a href="#" class="logo"><span>Jonathan</span></a>
 
+        <!-- Liens de navigation -->
         <ul class="links">
             <a href="#acceuil">Acceuil</a>
             <a href="#propos">À propos</a>
             <a href="#services">Compétences</a>
-            <a href="#contact">Coordonnées</a>
+            <a href="#footer">Coordonnées</a>
         </ul>
 
-        <i class='bx bx-menu-alt-right' id="menu"></i>
-
+        <!-- Bouton de contact -->
         <a href="#contact" class="btn">Me contacter</a>
     </nav>
 
+    <!-- Section accueil -->
     <section id="acceuil">
-
         <img src="images/profil.jpeg" alt="">
 
         <div class="info-box">
             <h1><span>Bonjour, je suis Jonathan</span></h1>
             <h3><span>Web Developer </span>situé à Calais</h3>
-            <p>Étudiant en Licence 1 info à l'ULCO. Pationné par le développement web, je conçois des sites et applications web interactifs et fonctionnels avec HTML - CSS -JavaScript. curieux et motivé, j'aime explorer de nouvelles technologies et apprendre en continu</p>
+            <p>
+                Étudiant en Licence 1 info à l'ULCO. Passionné par le développement web, 
+                je conçois des sites et applications web interactifs et fonctionnels avec HTML - CSS - JavaScript. 
+                Curieux et motivé, j'aime explorer de nouvelles technologies et apprendre en continu.
+            </p>
         </div>
 
+        <!-- Boutons vers autres sections -->
         <div class="btn-box">
-            <div class="btn">À propos</div>
-            <div class="btn">Me contacter</div>
+            <a href="#propos" class="btn">À propos</a>
+            <a href="#contact" class="btn">Me contacter</a>
         </div>
     </section>
 
+    <!-- Section À propos -->
     <section id="propos">
-
         <div class="propos-box">
-
             <div class="propos-info">
-
                 <h1><span>À propos de moi</span></h1>
-                <p>AAAAAAAaqsdfghjbknl,mù!:l;k,jhqexrtcyugijopkùmljkhgjfhdgcgvjbknl,m;ù!:;k,jhvv jk:l,!m.§AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-
+                <p>
+                    Curieux de nature, j’explore le monde du code comme un terrain de jeu. 
+                    Chaque ligne est une opportunité de créer, d’apprendre et de repousser les limites. 
+                    Mon objectif : transformer des idées en interfaces vivantes.
+                </p>
             </div>
 
+            <!-- Liste des compétences -->
             <h2><span>Compétences</span></h2>
-
             <div class="compts">
-
                 <ul>
-                    <li>
-                        <span><i class='bx bx-chevron-right'></i> HTML</span>
-                    </li>
-
-                    <li>
-                        <span><i class='bx bx-chevron-right'></i> CSS</span>
-                    </li>
-
-                    <li>
-                        <span><i class='bx bx-chevron-right'></i> JavaScript</span>
-                    </li>
+                    <li><span><i class='bx bx-chevron-right'></i> HTML</span></li>
+                    <li><span><i class='bx bx-chevron-right'></i> CSS</span></li>
+                    <li><span><i class='bx bx-chevron-right'></i> JavaScript</span></li>
                 </ul>
 
                 <ul>
-                    <li>
-                        <span><i class='bx bx-chevron-right'></i> Python</span>
-                    </li>
-
-                    <li>
-                        <span><i class='bx bx-chevron-right'></i> C</span>
-                    </li>
-
-                    <li>
-                        <span><i class='bx bx-chevron-right'></i> figma</span>
-                    </li>
+                    <li><span><i class='bx bx-chevron-right'></i> Python</span></li>
+                    <li><span><i class='bx bx-chevron-right'></i> C</span></li>
+                    <li><span><i class='bx bx-chevron-right'></i> Figma</span></li>
                 </ul>
             </div>
         </div>
 
+        <!-- Image de profil -->
         <img src="images/profil.jpeg" alt="">
-
     </section>
 
+    <!-- Section Services -->
     <section id="services">
-
         <h1 class="header"><span>Services</span></h1>
 
         <div class="serv-cont">
 
+            <!-- Carte Web Design -->
             <div class="box">
-
                 <h1><span>Web Design</span></h1>
-
-                <p>AAAAAAAaqsdfghjbknl,mù!:l;k,jhqexrtcyugijopkùmljkhgjfhdgcgvjbknl,m;ù!:;k,jhvv jk:l,!m.§AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                <p>Création d’interfaces modernes, intuitives et responsives. J’accorde une attention particulière à l’esthétique, à la cohérence visuelle et à l’expérience utilisateur. Chaque design est pensé pour refléter l’identité de ton projet.</p>
                 <img src="images/web-design.jpeg" alt="">
             </div>
 
+            <!-- Carte Web Development -->
             <div class="box">
-
                 <h1><span>Web Development</span></h1>
-
-                <p>AAAAAAAaqsdfghjbknl,mù!:l;k,jhqexrtcyugijopkùmljkhgjfhdgcgvjbknl,m;ù!:;k,jhvv jk:l,!m.§AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                <p>Développement de sites web performants, sécurisés et évolutifs. Que ce soit en front-end ou back-end, j’utilise des technologies adaptées à tes besoins pour transformer tes idées en solutions concrètes.</p>
                 <img src="images/web-dev.jpeg" alt="">
             </div>
 
+            <!-- Carte UI/UX -->
             <div class="box">
-
                 <h1><span>UI/UX</span></h1>
-
-                <p>AAAAAAAaqsdfghjbknl,mù!:l;k,jhqexrtcyugijopkùmljkhgjfhdgcgvjbknl,m;ù!:;k,jhvv jk:l,!m.§AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+                <p>Conception d’expériences utilisateur fluides et engageantes. J’analyse les comportements, optimise les parcours et crée des interfaces qui facilitent la navigation tout en valorisant ton contenu.</p>
                 <img src="images/UI-UX.jpeg" alt="">
             </div>
         </div>
     </section>
 
+    <!-- Section Contact -->
     <section id="contact">
-
         <h1 class="header"><span>Contact</span></h1>
 
         <form action="#" method="post">
+
+            <!-- Champ Nom -->
             <div class="entrer-box">
                 <span>Nom complet</span>
-                <input type="text" placeholder="Enter votre nom complet">
+                <input type="text" placeholder="Entrez votre nom complet">
             </div>
 
+            <!-- Champ Email -->
             <div class="entrer-box">
                 <span>Ton Email</span>
-                <input type="text" placeholder="Enter votre Email">
+                <input type="text" placeholder="Entrez votre Email">
             </div>
 
+            <!-- Champ Message -->
             <div class="entrer-box">
-                <span>Nom complet</span>
-                <input type="text" placeholder="Enter votre message">
+                <span>Message</span>
+                <input type="text" placeholder="Entrez votre message">
             </div>
 
+            <!-- Boutons du formulaire -->
             <div class="btn-box">
                 <button type="submit" class="btn">Envoyer</button>
                 <button type="reset" class="btn">Supprimer</button>
             </div>
         </form>
-
     </section>
 
-    <footer class="footer">
-
+    <!-- Pied de page -->
+    <footer id="footer" class="footer">
         <div class="footer-content">
+
+            <!-- Icônes sociales -->
             <div class="social-icons">
-                <a href="#"><i class="bx bxl-whatsapp"></i></a>
-                <a href="#"><i class="bx bxl-instagram"></i></a>
-                <a href="#"><i class="bx bxl-facebook"></i></a>
-                <a href="#"><i class="bx bxl-twitch"></i></a>
+                <a href="https://wa.me/33613098335?text=Bonjour%20!"><i class="bx bxl-whatsapp"></i></a>
+                <a href="https://www.instagram.com/j._.joestar/"><i class="bx bxl-instagram"></i></a>
+                <a href="https://github.com/JonathanMbongoK/portfolio_1"><i class="bx bxl-github"></i></a>
+                <a href="https://www.linkedin.com/in/jonathan-mbongo/"><i class="bx bxl-linkedin"></i></a>
             </div>
 
+            <!-- Copyright -->
             <div>
-                <p class="copyright">© 2025 Jonathan Mbongo | All Rights Reserved.</p>
+                <p class="copyright">© 2025 Jonathan Mbongo | Tous droits réservés.</p>
             </div>
         </div>
-
     </footer>
+
     <script src="js/script.js"></script>
 </body>
 </html>
